Ortography and redaction TotE

--- a/TorreElefante/contenido.tex
+++ b/TorreElefante/contenido.tex
@@ -46,14 +46,14 @@
             \item 10600 palabras en Español
             \item Lectura en 60-90 minutos
          \end{itemize}
-         \item Una historia de su personaje mas famoso: Conan el bárbaro
+         \item Una historia de su personaje más famoso: Conan el bárbaro
          \item Muchas veces publicada en Español y en el idioma original
     \end{itemize}
 \end{columns}
 \end{frame}
 \note[itemize]{
 	\item La historia se encuentra en muchas recopilaciones y en varias ediciones tanto en Inglés como en Español
-	\item Ésta es la historia que yo siempre recomiendo a alguien que nunca ha leido al Conan de REH
+	\item Ésta es la historia que yo siempre recomiendo a alguien que nunca ha leído al Conan de REH
 }
 
 \begin{frame}{La primera ilustración}
@@ -73,7 +73,7 @@
 \note[itemize]{
 	\item Muchos ilustradores dibujan alguna escena de esta historia para sus portafolios
 	\item Ésta fue la primera ilustración del relato
-	\item Esto se vuelve interesante por una controversia aue explicare mas adelante
+	\item Ésto se vuelve interesante por una controversia que explicaré más adelante
 }
 
 \begin{frame}{Orden de publicación del ciclo de Conan}
@@ -98,10 +98,10 @@
 	\item Ha habido varios intentos de establecer una cronología de la vida ficticia de Conan. De estos intentos el más famoso es el de Miller/Clark/de Camp, porque contó con la bendición de REH en su versión más temprana.
 	\item Aunque hay por los menos otros cuatro intentos importantes, que ya incluyen los trabajos de los otros autores escritos muchos años después de la muerte de REH.
 	\item Casi todas las cronologías coinciden en que este debería ser el segundo *relato* de Conan, (de los escritos por REH), en el orden de la vida del personaje.
-	\item Es decir, donde nos encontramos con un Conan muy joven. Aunque en el relato su edad no se menciona, de acuerdo a las cronologías Conan deberia haber tenido cerca de 17 años.
+	\item Es decir, donde nos encontramos con un Conan muy joven. Aunque en el relato su edad no se menciona, de acuerdo a las cronologías Conan debería haber tenido cerca de 17 años.
 	\item De las otras obras originales de REH anteriores en la cronología dos no son cuentos.
 	\item El ensayo La era Hiboria y el poema Cimeria.
-	\item Finalmente a la única historia que la antecede: La hija del gigante helado a veces se le disputa su status de historia de Conan.
+	\item Finalmente, a la única historia que la antecede: \say{La hija del gigante helado} a veces se le disputa su status de historia de Conan.
 }
 
 \begin{frame}{Espacio en la edad Hiboria}
@@ -157,11 +157,11 @@
 \end{columns}
 \end{frame}
 \note[itemize]{
-	\item En el canal de MKV, él dice que este es uno de los mejores cómics, no solo de Conan, ni de Marvel sino de su época de la década de los 70s.
-	\item El dibujante e ilustrado Ingles Barry Windsor Smith, se volvio famoso por su trabajo en este titulo entre 1970 y 1973, despues dibujaria Weapon X.
-	\item El dibujante Italoamericano Sal Buscema, entitno en uno de sus primeros trabajos (antes de que se volviera artista principal).
-	\item Roy Thomas, es quein introdujo el personaje de Coonan a los comics, es probablemente el mejor adaptador de historias de REH al Comic. Ha creado muchisimos peronajes de Marvel, probablemente la figura mas influyente de Marvel despues de Stand Lee.
-	\item Se le da credito como editor al jefe de la compania Satand Lee
+\item En el canal de MKV, él dice que este es uno de los mejores cómics, no solo de Conan, ni de Marvel sino de su época de la década de los 70s.
+\item El dibujante e ilustrador Ingles Barry Windsor Smith, se volvió famoso por su trabajo en este título entre 1970 y 1973, después dibujaría Weapon X.
+\item El dibujante Italoamericano Sal Buscema es el entintador. Éste uno de sus primeros trabajos (antes de que se volviera artista principal).
+\item Roy Thomas, es quien introdujo el personaje de Conan a los cómics, es probablemente el mejor adaptador de historias de REH al cómic. Ha creado muchísimos personajes de Marvel, es probablemente la figura más influyente de Marvel después de Stand Lee.
+\item Se le da crédito como editor al jefe de la compañía a Stand Lee
 }
 
 % \begin{frame}{}
@@ -219,10 +219,10 @@
 \end{columns}
 \end{frame}
 \note[itemize]{
-	\item Este seria para mi el comic perfecto o el mas representativo de la edad de oro de Conan (ya se que tecnicament es la edad de bronze de los comics de lo 70 al 85)
-	\item El Artista es John Buscema, es el hermano mayor de Sal Buscema. Tambien italoamericano, es para mi el mejor dibujante de Conan, de hecho, si a mi me piden que cierre los ojos y me imagine a Conan me lo imagino como lo dibujaba Jhon Buscema.
-	\item El artista Filipino Alfredo Alcala es el segundo artista, probablemnet en la escenas de la narracion de YogKhosha. El ya habia hecho un personaje parecido a Conan, Voltar y se dice que Frank Frazetta se inspiro en el para hacer su propio Conan
-	\item El artista norteamericano Earl Norem en la portada. Es probablemnete el artista que mas portadas de TSSC hizo durante la serie.
+\item Este sería para mí el cómic perfecto o el más representativo de la edad de oro de Conan (ya se que técnicamente es la edad de bronce de los cómics de lo 70 al 85)
+\item El Artista es John Buscema, es el hermano mayor de Sal Buscema. También italoamericano, es para mi el mejor dibujante de Conan. De hecho, si a mi me piden que cierre los ojos y me imagine a Conan me lo imagino como lo dibujaba Jhon Buscema.
+\item El artista Filipino Alfredo Alcala es el segundo artista, probablemente en las escenas de la narración de Yog Khosha. El ya había hecho un personaje parecido a Conan, Voltar y se dice que Frank Frazetta se inspiró en él para hacer su propio Conan
+\item El artista norteamericano Earl Norem en la portada. Es probablemente el artista que más portadas de TSSC hizo durante la serie.
 }
 
 % \begin{frame}{}
@@ -292,18 +292,18 @@
 \end{columns}
 \end{frame}
 \note[itemize]{
-	\item Probablemnete la mejor adaptacion de la obra original de REH a un Comic.
-	\i tem Uno de lo mejore miniarcos de Conan de DrakHrse, forma parte de su mejor volume el que simpremente se llamaba Conan
-	\item Hereda parte del equiop creativo que ya habia ganado el Eisner por el numero 0
-	\item Cuando vi por primera vez esta serie era una forma de hacer comics que nunca habia visto (sin entintador).Estos numeros tambien ocupan esa tecnica
-	\item El canadiense Cary Nord en los trazos, que como dijimos gano el Eisner por el numero 0 de Conan, uno de los grandes dibujantes de Conan de todos los tiempos.
-	\item Es escritor Estadounidense Kurt Busiek, el gran escritor de la corrida de Conan con DH, famoso por su comic Astro City, aqui hace una gran labor adaptando.
-	\item El colorista estadounidense Dave Steward, que es una garantia, pues el solo tiene mas Eisners que todos los antes mencionados. Y que el pobre sufre la maldicion de los homonimos.
-	\item El artista/pintor mexicano Jose Lardonn, oriundo de Veracruz, tambien con Eisner junto con Richard Stalking y que se ha dedicado mas al arte que a los comics. Este es uno de lo pocos ejemplos en las portadas. Kudos por la tercera portada
-	\item El britanico Richard Starkings aka Comicraft, que es el mejor y mas famoso letrista en los comics hoy dia, famoso por elephanmen, y aun ligado a Conan con la mas reciente publicacion de Titan
+\item Probablemente la adaptación más fiel de la obra original de REH a un cómic.
+\item Uno de lo mejore mini arcos de Conan de Dark Horse, forma parte de su mejor volumen el que simplemente se llamaba Conan
+\item Hereda parte del equipo creativo que ya había ganado el Eisner por el número 0
+\item Cuando vi por primera vez esta serie era una forma de hacer cómics que nunca había visto (sin entintador). Estos números también ocupan esta técnica
+\item El canadiense Cary Nord en los trazos, que como dijimos ganó el Eisner por el número 0 de Conan, uno de los grandes dibujantes de Conan de todos los tiempos.
+\item Es escritor Estadounidense Kurt Busiek, el gran escritor de la corrida de Conan con DH, famoso por su comic Astro City, aquí hace una gran labor adaptando.
+\item El colorista estadounidense Dave Steward, que es una garantía, pues el solo tiene más Eisners que todos los antes mencionados. Y que el pobre sufre la maldición de los homónimos.
+\item El artista/pintor mexicano Jose Lardonn, oriundo de Veracruz, también con Eisner junto con Richard Stalking y que se ha dedicado más al arte que a los cómics. Este es uno de los pocos ejemplos en las portadas. Kudos por la tercera portada
+\item El britanico Richard Starkings aka Comicraft, que es el mejor y más famoso letrista en los cómics hoy día, famoso por Elephantmen, y aún ligado a Conan con la más reciente publicación de Titan
 }
 
-\begin{frame}{Acción comics: La torre del elefante}
+\begin{frame}{Acción cómics: La torre del elefante}
 	\begin{columns}
 		\column[t]{0.4\textwidth}
 		\begin{figure}[htb]
@@ -314,7 +314,7 @@
 		\column[t]{0.6\textwidth}
 		\begin{itemize}
 			\item Tomo único
-			\item Comic editado en Chile
+			\item Cómic editado en Chile
 			\item 76 páginas en Blanco y Negro
 			\item Créditos:
 			\begin{description}
@@ -329,9 +329,9 @@
 	\end{columns}
 \end{frame}
 \note[itemize]{
-	\item Editorial Chilen Action Comics
-	\item El artista argentino Enrique \say{Kike} alcatena, que ya antes habia dibujado a Conan para Marvel.
-	\item El guionista y periodista Claudio Álvarez que forma parte de los fundadores de la editorial y que asumo que es Chileno.
+\item Editorial Chilena Action Comics
+\item El artista argentino Enrique \say{Kike} alcatena, que ya antes habia dibujado a Conan para Marvel.
+\item El guionista y periodista Claudio Álvarez que forma parte de los fundadores de la editorial y que asumo que es Chileno.
 }
 
 \begin{frame}{Conan illustré: La Tour de l’Eléphant}
@@ -359,8 +359,8 @@
 	\end{columns}
 \end{frame}
 \note[itemize]{
-	\item El ilustrado Frances Valentin Sécher, que ya antes habia hecho una obra de Conana ilustrada, pero ue es con esta l a que alacanza su prime.
-	\item Es tan buena que la editorial Titan esta en platicas para hacer una edicion en Ingles (que se publicará en Agosto de este año)
+\item El ilustrado Francés Valentin Sécher, que ya antes había hecho edición ilustrada de un libro Conan ilustrado. Pero que es con esta obra con la que alcanza su prime.
+\item Es tan buena que la editorial Titan está en pláticas para hacer una edición en Inglés (que se publicará en Agosto de este año)
 }
 % \begin{frame}{}
 % \begin{figure}[htp]
@@ -422,7 +422,7 @@
 \end{columns}
 \end{frame}
 \note{
-Todo el relato ocurre en una noche en la ciudad de Arenjunn, en la provincia de Zamora.
+Todo el relato ocurre en una noche.
 La historia comienza en una taberna del barrio del Maul.
 La taberna está repleta de forajidos, ladrones, mercenarios, prostitutas y aventureros.
 }
@@ -466,7 +466,8 @@ Otro de los asistentes es Conan un bárbaro del norte; que en ese momento es muy
 \end{columns}
 \end{frame}
 \note{
-El bárbaro decide interrumpir la narración para preguntar con curiosidad acerca de la joya. Debido a la interrupción, empieza una discusión que termina en una pelea.
+El bárbaro decide interrumpir la narración para preguntar con curiosidad acerca de la joya.
+Debido a la interrupción, empieza una discusión que termina en una pelea.
 En medio de la confusión y después de matar a su oponente Conan escapa y decide encaminarse a \say{la torre del elefante} para tratar de robar la joya.
 }
 
@@ -513,7 +514,8 @@ Y dado que ambos tienen el mismo objetivo y que Tauros se sorprende del arrojo d
 \end{columns}
 \end{frame}
 \note{
-Tauros advierte que en el jardín no hay guardias humanos, si no una jauría de leones. Pero también muestra estar preparado y con un artificio (gas envenenado) logran matar a los guardianes.
+Tauros advierte que en el jardín no hay guardias humanos, si no una jauría de leones.
+Pero también muestra estar preparado y con un artificio (gas envenenado) logran matar a los guardianes.
 
 Al llegar al borde de la torre, deciden escalar por la pared exterior, dado que Tauros trae consigo una cuerda para tal propósito.
 }
@@ -636,7 +638,7 @@ Conan, accede, y tal como lo instruyó Yag-Khosa, entierra su espada en el pecho
 Luego toma la joya y sale de la habitación.
 
 Se dirige a un recinto inferior donde Yara, se encuentra meditando.
-Cuando Conan entra a la habitación, Yara despierta y Conan --siguiendo las insturcciones--, le dice que este es un regalo de parte de Yag-Khosa y pone la joya enfrente de Yara.
+Cuando Conan entra a la habitación, Yara despierta y Conan --siguiendo las instrucciones--, le dice que este es un regalo de parte de Yag-Khosa y pone la joya enfrente de Yara.
 }
 
 \begin{frame}{}
@@ -659,10 +661,11 @@ Cuando Conan entra a la habitación, Yara despierta y Conan --siguiendo las inst
 Una especie de hechizo entra en efecto y Yara, se ve atraído hacia la joya mientras poco a poco va encogiéndose hasta que es un ser de unos cuantos centímetros que es absorbido por la joya.
 Dentro de la joya el ser diminuto que ahora es Yara, es perseguido por una versión de Yag-Khosa que entendemos esta cumpliendo su venganza.
 
-Despues de que  la venganza ha sido ejecutada, la torre empieza a derrumbarse y Conan logra salir sin encontrar ninguna resistencia.
+Despues de que  la venganza ha sido ejecutada, Conan logra salir de la torre sin encontrar ninguna resistencia.
 Al parecer el resto de los guardianes han sido inhabilitados por la promesa de Yag-Khosa.
 
-Finalmente, Conan logra salir de la torre y se pregunta si todo lo que paso ha sido un sueño. Pero al mirar hacia atrás observa el edificio, e instantes después éste se derrumba ante sus ojos.
+Finalmente, Conan esta fuera de la torre y se pregunta si todo lo que paso ha sido un sueño.
+Pero al mirar hacia atrás observa el edificio, e instantes después éste se derrumba ante sus ojos.
 }
 
 \section{Personajes}
@@ -698,7 +701,7 @@ Finalmente, Conan logra salir de la torre y se pregunta si todo lo que paso ha s
 \end{frame}
 \note[itemize]{
 	\item No olvidar que Conan representa varios arquetipos en sus diferentes aventuras.
-	\item Esta al ser una de la primeras aventuras de su juventud predomina la idea del “salvaje noble”
+	\item Está al ser una de la primeras aventuras de su juventud predomina la idea del \say{salvaje noble}
 }
 
 \begin{frame}{Tauros}
@@ -874,7 +877,7 @@ Finalmente, Conan logra salir de la torre y se pregunta si todo lo que paso ha s
 \end{columns}
 \end{frame}
 \note[itemize]{
-	\item No olvidemos que el libro de Tolkien fue publicado en el 54.
+	\item No olvidemos que el libro de Tolkien fue publicado en el 1954.
 }
 
 \begin{frame}{Los leones}
@@ -906,8 +909,8 @@ Finalmente, Conan logra salir de la torre y se pregunta si todo lo que paso ha s
 \end{columns}
 \end{frame}
 \note[itemize]{
-	\item  Howard siempre profirió en sus historias profunda admiración por los felinos.
-	\item De hecho siempre que describe a sus protagonistas, no solo en el ciclo de Conan sino en todas sus obras, les da cualidades que son comparables a las de algún felino.
+\item Howard siempre profirió en sus historias profunda admiración por los felinos.
+\item De hecho, siempre que describe a sus héroes o protagonistas, no solo en el ciclo de Conan sino en casi todas sus obras, les atribuye cualidades que son comparables a las de algún felino.
 }
 
 
@@ -1021,9 +1024,9 @@ Civilized men are more discourteous than savages because they know they can be i
  \end{columns}
 \end{frame}
 \note[itemize]{
-	\item Recordemos que Conan tiene distintos estereotipos a lo largo de sus aventuras.
-	\item En esta etapa Conan no es un héroe, no sigue el camino del héroe como diría Joseph Campbell.
-	\item Aunque bueno en los análisis que revise, hay uno donde lo hacen entrar con calzador. Esto no es cierto en esta historia Conan es un antihéroe.
+\item Recordemos que Conan representa distintos estereotipos a lo largo de sus aventuras.
+\item En esta etapa Conan no es un héroe, no sigue el camino del héroe como diría Joseph Campbell.
+\item Aunque en los análisis que revise, hay uno donde lo hacen entrar con calzador. Esto no es cierto en esta historia Conan es un antihéroe.
 }
 
 \begin{frame}{Instintos superan la razón}
@@ -1150,7 +1153,7 @@ Civilized men are more discourteous than savages because they know they can be i
   \end{columns}
 \end{frame}
 \note[itemize]{
-	\item Mencionar lo de la apariencia de YogKhosha como Cthullu en vez de elefante.
+	\item Mencionar lo de la apariencia de Yog-Khosha como Cthullu en vez de elefante.
 }
 
 \begin{frame}{Historias anidadas}
@@ -1172,7 +1175,7 @@ Civilized men are more discourteous than savages because they know they can be i
 \note[itemize]{
 	\item Esta es otra razón de por que ToE es una de las mejores historias de Howard.
 	\item Si hay por ahí algo de que en los pulps pagaban a los escritores por palabra.
-	\item Pero aun así Howard, es un maestro de la historias naidadas y de la información extra.
+	\item Pero aun así Howard, es un maestro de la historias anidadas y de la información extra.
 	\item No usa descripciones detalladas, mejor la usa en anécdotas y en pequeños guiños a la psicología de su personaje
 }
 
@@ -1262,7 +1265,7 @@ Civilized men are more discourteous than savages because they know they can be i
 \note[itemize]{
 	\item Varios artistas han realizado ilustraciones sueltas de Conan para sus portafolios
 	\item Esto sucede porque Conan es uno de los títulos que le conceden más reconocimiento al portafolio de un artista.
-	\item Es algo así como si eres escritor (o guionista) de Comics uno título que viste mucho tu curriculum es Swamp Thing o Hellraiser o Batman.
+	\item Es algo así como si eres escritor (o guionista) de cómics uno título que viste mucho tu curriculum es Swamp Thing o Hellraiser o Batman.
 	\item Para los dibujantes, yo creo que son X-Men, Conan o Spider-man
 	\item En ese sentido muchos artistas, han hecho ilustraciones sueltas de Conan para sus portafolios y esta es en particular una historia clásica para hacer dichas ilustraciones.
 }
