Cuentos de abuelito

--- a/ReinaConstaNegra/contenido.tex
+++ b/ReinaConstaNegra/contenido.tex
@@ -123,6 +123,51 @@
 	\item
 }
 
+\begin{frame}{Cuentos de abuelito}
+	\begin{columns}
+		\column[t]{0.4\textwidth}
+		\begin{figure}[htb]
+			\centering
+			\begin{subfigure}[b]{0.35\textwidth}
+				\includegraphics[width=\textwidth]{img/abuelito00}
+			\end{subfigure}
+			~
+			\begin{subfigure}[b]{0.35\textwidth}
+				\includegraphics[width=\textwidth]{img/abuelito01}
+			\end{subfigure}
+			\\
+			\begin{subfigure}[b]{0.35\textwidth}
+				\includegraphics[width=\textwidth]{img/abuelito03}
+			\end{subfigure}
+			~
+			\begin{subfigure}[b]{0.35\textwidth}
+				\includegraphics[width=\textwidth]{img/abuelitoReprint}
+			\end{subfigure}
+		\end{figure}
+		\column[t]{0.6\textwidth}
+		\begin{itemize}
+			\item Publicados en 1952 por CEMSA
+			\item La primer adaptación de Conan al comic
+			\item Conan era un personaje secundario
+			\begin{itemize}
+				\item Lo dibujaban con cabello rubio
+			\end{itemize}
+		    \item Reeditado al menos dos veces
+		    \item Varios artistas:  Hector Gutierrez (Hecky), Francisco G. Alemán (Ale G.), Sal Lavalle.
+		    \item Varios escritores: Victor Rodriguez, Rodolfo Loa, Riol de Man, Carlos del Prado.
+		    \item No tenían licencia ni derechos de publicación de Conan
+		\end{itemize}
+	\end{columns}
+\end{frame}
+\note[itemize]{
+
+	\item Primero formaban parte de una serie de antologia: Cuentos de abuelito
+	\item Histarias en la antologia incluyeron: \say{Kun'gha, La Diosa de Oro} (1-8), \say{La Reina de la Costa Negra}, \say{La Araña} (bsado en el personaje de pulp: The Spider), \say{El Monje Loco},  y \say{Gengis Khan}.
+	\item Reimpresos dos veces: La Reina de la Costa Negra (Editiones Mexicanas Asociadas, 1958) y La Reina de la Costa Negra (Ediciones Joma, 1965)
+	\item El número exacto de ejemplares se desconoce
+	\item Su existencia era desconocida hasta hace poco (ni siquiera los biografos expertos en REH lo sabian)
+}
+
 \begin{frame}{Conan the barbarian}
 	\begin{columns}
 		\column[t]{0.5\textwidth}
@@ -655,7 +700,7 @@
 	\item
 }
 
-\begin{frame}{La canción de Belit}
+\begin{frame}{La canción de Belit I}
 	\begin{exampleblock}{}
 		Believe green buds awaken in the spring.
 
@@ -677,12 +722,109 @@
 	\item
 }
 
+\begin{frame}{La canción de Belit II}
+	\begin{exampleblock}{}
+		In that dead citadel of crumbling stone.
+
+		Her eyes were snared by that unholy sheen,
+
+		And curious madness took me by the throat,
+
+		As of a rival lover thrust between.
+	\end{exampleblock}
+
+	\begin{itemize}
+		\item \textit{ \say{En aquella ciudadela de la muerte de piedras destrozadas, \\
+				sus ojos cayeron en la trampa de aquel fulgor profano y terrible.\\
+				Una extraña locura me oprimió con fuerza la garganta,\\
+				como un rival que se interpone entre dos amantes.} }
+	\end{itemize}
+\end{frame}
+\note[itemize]{
+	\item
+}
+
+\begin{frame}{La canción de Belit III}
+	\begin{exampleblock}{}
+		Was it a dream the nighted lotus brought?
+
+		Then curst the dream that bought my sluggish life;
+
+		And curst each laggard hour that does not see
+
+		Hot blood drip blackly from the crimsoned knife.
+	\end{exampleblock}
+
+	\begin{itemize}
+		\item \textit{ \say{¿Fue un sueño lo que trajo el loto negro? \\
+				Entonces, maldito sea el sueño que angustió mi vida, \\
+				y maldita la rezagada hora que no ve\\
+				la cálida sangre goteando del cuchillo de color carmesí.} }
+	\end{itemize}
+\end{frame}
+\note[itemize]{
+	\item
+}
+
+\begin{frame}{La canción de Belit IV}
+	\begin{exampleblock}{}
+		The shadows were black around him,
+
+		The dripping jaws gaped wide,
+
+		Thicker than rain the red drops fell;
+
+		But my love was fiercer than Death’s black spell,
+
+		Nor all the iron walls of hell
+
+		Could keep me from his side.
+	\end{exampleblock}
+
+	\begin{itemize}
+		\item \textit{ \say{Estaba rodeado de negras sombras;\\
+				las fauces chorreantes se abrieron desmesuradamente\\
+				y cayeron gotas rojas más gruesas que la lluvia;\\
+				pero mi amor era más fuerte que el negro hechizo de la muerte,\\
+				y ni siquiera las puertas de hierro del infierno\\
+				podrían alejarme de su lado.} }
+	\end{itemize}
+\end{frame}
+\note[itemize]{
+	\item
+}
+
+\begin{frame}{La canción de Belit V}
+	\begin{exampleblock}{}
+		Now we are done with roaming, evermore;
+
+		No more the oars, the windy harp’s refrain;
+
+		Nor crimson pennon frights the dusky shore;
+
+		Blue girdle of the world, receive again
+
+		Her whom thou gavest me.
+	\end{exampleblock}
+
+	\begin{itemize}
+		\item \textit{ \say{Terminaron para siempre las aventuras;\\
+				no se alzarán más los remos, ni ondearán las velas;\\
+				el pendón escarlata ya no será el terror de las costas oscuras;\\
+				mares azules del mundo, recibid nuevamente en vuestro seno\\
+				a la mujer que me habéis entregado.} }
+	\end{itemize}
+\end{frame}
+\note[itemize]{
+	\item
+}
+
 \section{Tropes literarios}
 \note[itemize]{
 	\item
 }
 
-\begin{frame}{Espada y hechizeria}
+\begin{frame}{Espada y hechicería}
 	\begin{columns}
 		\column[t]{0.4\textwidth}
 		\begin{itemize}
@@ -797,7 +939,7 @@
 
 \begin{frame}{Conan es un guerrero perfecto}
 	\begin{columns}
-		\column[t]{0.4\textwidth}
+		\column[t]{0.5\textwidth}
 		\begin{itemize}
 			\item Con la espada mantiene a los piratas a raya
 			\begin{itemize}
@@ -810,7 +952,7 @@
 			\item Mata la últimas hienas con sus manos
 			\item Se cuentan leyendas de su habilidad guerrera en sus años con Belit
 		\end{itemize}
-		\column[t]{0.6\textwidth}
+		\column[t]{0.5\textwidth}
 		\begin{figure}[htb]
 			\centering
 			\includegraphics[width=0.8\textwidth]{img/tributos/elephant07}
@@ -927,8 +1069,8 @@
 		\end{subfigure}
 		~
 		\begin{subfigure}[b]{0.22\textwidth}
-			\includegraphics[width=\textwidth]{img/tributos/KenKelly}
-			\caption{KenKelly}
+			\includegraphics[width=\textwidth]{img/tributos/MarkSchultz2}
+			\caption{Mark Schultz}
 		\end{subfigure}
 	\end{figure}
 \end{frame}
@@ -940,8 +1082,8 @@
 	\begin{figure}[htp]
 		\centering
 		\begin{subfigure}[b]{0.22\textwidth}
-			\includegraphics[width=\textwidth]{img/tributos/MarkSchultz2}
-			\caption{Mark Schultz}
+			\includegraphics[width=\textwidth]{img/tributos/KenKelly}
+			\caption{Ken Kelly}
 		\end{subfigure}
 		~
 		\begin{subfigure}[b]{0.4\textwidth}
