--- a/TorreElefante/contenido.tex
+++ b/TorreElefante/contenido.tex
@@ -968,7 +968,7 @@ Civilized men are more discourteous than savages because they know they can be i
 	\item
 }
 
-\begin{frame}{Espada y hechizeria}
+\begin{frame}{Espada y hechicería}
 \begin{columns}
 \column[t]{0.4\textwidth}
  \begin{itemize}
