--- a/ReinaConstaNegra/presentacion.tex
+++ b/ReinaConstaNegra/presentacion.tex
@@ -46,7 +46,7 @@
 }
 
 % Construyendo la diapositiva de titulo
-\title[La torre del elefante]{La reina de la Costa Negra}
+\title[La reina de la Costa Negra]{La reina de la Costa Negra}
 \subtitle{de Robert E. Howard}
 \author[Nemediano]{Análisis literario}
 \institute[El baúl de Howard]{
