--- a/ReinaConstaNegra/contenido.tex
+++ b/ReinaConstaNegra/contenido.tex
@@ -342,7 +342,7 @@
 		\begin{figure}[htp]
 			\centering
 			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
+				\includegraphics[width=\textwidth]{img/conan/Ablaze}
 			\end{subfigure}
 			~
 			\begin{subfigure}[b]{0.27\textwidth}
@@ -350,7 +350,7 @@
 			\end{subfigure}
 			~
 			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+				\includegraphics[width=\textwidth]{img/conan/CTB}
 			\end{subfigure}
 		\end{figure}
 	\end{columns}
@@ -373,15 +373,15 @@
 		\begin{figure}[htp]
 			\centering
 			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
+				\includegraphics[width=\textwidth]{img/belit/Ablaze}
 			\end{subfigure}
 			~
 			\begin{subfigure}[b]{0.27\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/DH}
+				\includegraphics[width=\textwidth]{img/belit/DH}
 			\end{subfigure}
 			~
 			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+				\includegraphics[width=\textwidth]{img/belit/CTB}
 			\end{subfigure}
 		\end{figure}
 	\end{columns}
@@ -403,15 +403,15 @@
 		\begin{figure}[htp]
 			\centering
 			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
+				\includegraphics[width=\textwidth]{img/tito/Ablaze}
 			\end{subfigure}
 			~
 			\begin{subfigure}[b]{0.27\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/DH}
+				\includegraphics[width=\textwidth]{img/tito/DH}
 			\end{subfigure}
 			~
 			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+				\includegraphics[width=\textwidth]{img/tito/CTB}
 			\end{subfigure}
 		\end{figure}
 	\end{columns}
@@ -436,15 +436,15 @@
 		\begin{figure}[htp]
 			\centering
 			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
+				\includegraphics[width=\textwidth]{img/guardian/Ablaze}
 			\end{subfigure}
 			~
 			\begin{subfigure}[b]{0.27\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/DH}
+				\includegraphics[width=\textwidth]{img/guardian/DH}
 			\end{subfigure}
 			~
 			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+				\includegraphics[width=\textwidth]{img/guardian/CTB}
 			\end{subfigure}
 		\end{figure}
 	\end{columns}
@@ -468,17 +468,18 @@
 		\column[t]{0.6\textwidth}
 		\begin{figure}[htp]
 			\centering
-			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
-			\end{subfigure}
-			~
 			\begin{subfigure}[b]{0.27\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/DH}
+				\includegraphics[width=\textwidth]{img/rio/Ablaze}
 			\end{subfigure}
 			~
-			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+			\begin{subfigure}[b]{0.3\textwidth}
+				\includegraphics[width=\textwidth]{img/rio/CTB}
 			\end{subfigure}
+			\\
+			\begin{subfigure}[b]{0.6\textwidth}
+				\includegraphics[width=\textwidth]{img/rio/DH}
+			\end{subfigure}
+
 		\end{figure}
 	\end{columns}
 \end{frame}
@@ -501,15 +502,15 @@
 		\begin{figure}[htp]
 			\centering
 			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
+				\includegraphics[width=\textwidth]{img/loto/Ablaze}
 			\end{subfigure}
 			~
 			\begin{subfigure}[b]{0.27\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/DH}
+				\includegraphics[width=\textwidth]{img/loto/CTB}
 			\end{subfigure}
-			~
-			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+			\\
+			\begin{subfigure}[b]{0.6\textwidth}
+				\includegraphics[width=\textwidth]{img/loto/DH}
 			\end{subfigure}
 		\end{figure}
 	\end{columns}
@@ -532,16 +533,12 @@
 		\column[t]{0.6\textwidth}
 		\begin{figure}[htp]
 			\centering
-			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
+			\begin{subfigure}[b]{0.6\textwidth}
+				\includegraphics[width=\textwidth]{img/hienas/DH}
 			\end{subfigure}
-			~
-			\begin{subfigure}[b]{0.27\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/DH}
-			\end{subfigure}
-			~
-			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+			\\
+			\begin{subfigure}[b]{0.6\textwidth}
+				\includegraphics[width=\textwidth]{img/hienas/CTB}
 			\end{subfigure}
 		\end{figure}
 	\end{columns}
@@ -565,16 +562,12 @@
 		\column[t]{0.6\textwidth}
 		\begin{figure}[htp]
 			\centering
-			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
-			\end{subfigure}
-			~
 			\begin{subfigure}[b]{0.27\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/DH}
+				\includegraphics[width=\textwidth]{img/mgora/DH}
 			\end{subfigure}
-			~
-			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+			\\
+			\begin{subfigure}[b]{0.6\textwidth}
+				\includegraphics[width=\textwidth]{img/mgora/CTB}
 			\end{subfigure}
 		\end{figure}
 	\end{columns}
@@ -595,16 +588,16 @@
 		\column[t]{0.6\textwidth}
 		\begin{figure}[htp]
 			\centering
-			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
+			\begin{subfigure}[b]{0.31\textwidth}
+				\includegraphics[width=\textwidth]{img/nyaga/Ablaze}
 			\end{subfigure}
 			~
-			\begin{subfigure}[b]{0.27\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/DH}
+			\begin{subfigure}[b]{0.25\textwidth}
+				\includegraphics[width=\textwidth]{img/nyaga/DH}
 			\end{subfigure}
-			~
-			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+			\\
+			\begin{subfigure}[b]{0.32\textwidth}
+				\includegraphics[width=\textwidth]{img/nyaga/CTB}
 			\end{subfigure}
 		\end{figure}
 	\end{columns}
@@ -625,16 +618,16 @@
 		\column[t]{0.6\textwidth}
 		\begin{figure}[htp]
 			\centering
-			\begin{subfigure}[b]{0.3\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/CTB}
-			\end{subfigure}
-			~
 			\begin{subfigure}[b]{0.27\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/DH}
+				\includegraphics[width=\textwidth]{img/tigresa/DH}
 			\end{subfigure}
 			~
-			\begin{subfigure}[b]{0.23\textwidth}
-				\includegraphics[width=\textwidth]{img/conan/TSSC}
+			\begin{subfigure}[b]{0.25\textwidth}
+				\includegraphics[width=\textwidth]{img/tigresa/CTB}
+			\end{subfigure}
+		    ~
+			\begin{subfigure}[b]{0.2\textwidth}
+				\includegraphics[width=\textwidth]{img/tigresa/Ablaze}
 			\end{subfigure}
 		\end{figure}
 	\end{columns}
@@ -1094,6 +1087,52 @@
 		\begin{subfigure}[b]{0.22\textwidth}
 			\includegraphics[width=\textwidth]{img/tributos/SanJullian}
 			\caption{Sanjulián}
+		\end{subfigure}
+	\end{figure}
+\end{frame}
+\note[itemize]{
+	\item
+}
+
+\begin{frame}{Tributos de varios artistas (Belit)}
+	\begin{figure}[htp]
+		\centering
+		\begin{subfigure}[b]{0.22\textwidth}
+			\includegraphics[width=\textwidth]{img/tributos/BelitFigure}
+			\caption{McFarlane toys}
+		\end{subfigure}
+		~
+		\begin{subfigure}[b]{0.22\textwidth}
+			\includegraphics[width=\textwidth]{img/tributos/GaryKwapisz}
+			\caption{Gary Kwapisz}
+		\end{subfigure}
+		~
+		\begin{subfigure}[b]{0.22\textwidth}
+			\includegraphics[width=\textwidth]{img/tributos/OliverVatine}
+			\caption{Oliver Vatine}
+		\end{subfigure}
+	\end{figure}
+\end{frame}
+\note[itemize]{
+	\item
+}
+
+\begin{frame}{Tributos de varios artistas (Belit)}
+	\begin{figure}[htp]
+		\centering
+		\begin{subfigure}[b]{0.22\textwidth}
+			\includegraphics[width=\textwidth]{img/tributos/SanyaAnwar}
+			\caption{Sanya Anwar}
+		\end{subfigure}
+		~
+		\begin{subfigure}[b]{0.22\textwidth}
+			\includegraphics[width=\textwidth]{img/tributos/PabloMartos}
+			\caption{Pablo Martos}
+		\end{subfigure}
+		~
+		\begin{subfigure}[b]{0.22\textwidth}
+			\includegraphics[width=\textwidth]{img/tributos/SanaTakeda}
+			\caption{Sana Takeda}
 		\end{subfigure}
 	\end{figure}
 \end{frame}
